--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Moral education'
 - !lcc 'LB'
 - !lcsh 'Teaching'
+- GITenberg
 title: "The Teacher\r\nOr, Moral Influences Employed in the Instruction and Government\
   \ of the Young"
 url: http://www.gutenberg.org/ebooks/22251
